# krasis

./: .gitignore  ADVANCED.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  DEV.md  LICENSE  MODELS.md  PERFORMANCE_ANALYSIS.md  README.md  STATUS.md  STRATEGIES.md  TESTING.md  bench.py  benchmarks.jsonl  build.rs  dev  dump_trace.sh  fix-oomd.sh  gpu_cleanup.sh  gpu_reset.sh  install.sh  krasis  krasis_monitor.py  profile_results.json  pyproject.toml  run_benchmark.sh  run_debug_prefill.py  run_debug_prefill2.py  run_length_sweep.py  run_moe_compare.py  run_v2lite_nan_debug.py  setup_pcie.sh  test_gpu_prefill.py  test_kimi_k25.py  test_prefill_speed.py  test_pyo3.py  test_v2lite_10k.py  test_v2lite_dual_format.py  (+2 more)
.github/workflows/: release.yml
benchmarks/: BENCHMARKS.md  bench_decode.py  bench_decode_harness.py  benchmark_suite.toml  decode_prompt_1  decode_prompt_2  decode_prompt_3  decode_prompt_4  decode_prompt_5  decode_prompt_6  kt_benchmark.py  prefill_prompt_10k_1  prefill_prompt_10k_2  prefill_prompt_10k_3  prefill_prompt_10k_4  prefill_prompt_10k_5  prefill_prompt_10k_6  q235b_ep_test.toml  qcn_ep_test.toml
benchmarks/suite_logs/: suite_summary_20260220_102700.md
perplexity/: measure_ppl.py
perplexity/results/: DeepSeek-V2-Lite_c4_gpu_g4_c4_20260225_115537.json  DeepSeek-V2-Lite_wikitext-2_gpu_g4_c4_20260225_114016.json  Qwen3-Coder-Next_wikitext-2_gpu_g4_c4_20260223_113844.json  Qwen3-Coder-Next_wikitext-2_gpu_g4_c4_20260223_114256.json  Qwen3-Coder-Next_wikitext-2_gpu_g4_c4_20260223_115655.json
podman/: attach.sh  console.sh  launch.sh  podman-attach.sh  podman-shutdown.sh  startup.sh
python/krasis/: __init__.py  attention.py  auto_optimise.py  benchmark.py  chat.py  config.py  debug_tokenizer.py  decode_setup.py  fused_moe.py  gpu_prefill.py  launcher.py  layer.py  linear_attention.py  model.py  server.py  setup.py  sglang_bridge.py  stress_test.py  suite.py  timing.py  tokenizer.py  triton_moe.py  vram_budget.py  weight_loader.py
src/: decode.rs  gguf.rs  gpu_decode.rs  lib.rs  moe.rs  numa.rs  server.rs  syscheck.rs  vram_monitor.rs
src/cuda/: decode_kernels.cu
src/kernel/: avx2.rs  mod.rs
src/weights/: marlin.rs  mod.rs  safetensors_io.rs
testconfigs/: deepseek-vl2-4-4.conf  qcn-4-4.conf  qwen35-4-4.conf  v2lite-4-4.conf
tests/: bench_8k_decode.py  bench_decode_quick.py  bench_hot_cached_static.py  bench_model.py  bench_prefill_10k.py  coder_next_heatmap.json  decode_only_bench.py  hcs_benchmark_results.json  hcs_hybrid_results.json  investigate_decode_regression.py  meta_optimiser.py  profile_decode.py  profile_decode_nopin.py  qwen235b_hcs_results.json  qwen235b_heatmap.json  run_235b_benchmark.py  run_hcs_benchmark.py  run_hcs_hybrid_bench.py  run_long_prompt_test.py  run_qcn_long_isolated.py  test_attn_verify.py  test_auto_optimise_v2lite.py  test_bridge.py  test_cache_vs_direct.py  test_decode_timing.py  test_dense_only.py  test_gguf.py  test_gguf_native.py  test_gpu_decode.py  test_kimi_diag.py  test_kimi_gpu_prefill.py  test_kimi_k25.py  test_kimi_run6.py  test_kimi_run7.py  test_kimi_run8.py  test_la_graph_diag.py  test_layer0_detail.py  test_layer_compare.py  test_marlin_gpu1.py  test_moe_sanity.py  (+21 more)
