[package]
name = "krasis"
version = "0.1.1"
edition = "2021"
description = "Hybrid LLM runtime — minimal VRAM, always-on GPU prefill, optimised CPU inference"
license = "Apache-2.0"

[lib]
name = "krasis"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
memmap2 = "0.9"
safetensors = "0.4"
rayon = "1.10"
half = { version = "2.4", features = ["std", "num-traits"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
