[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "krasis"
version = "0.1.32"
description = "Hybrid LLM runtime — minimal VRAM, always-on GPU prefill, optimised CPU inference"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["llm", "inference", "moe", "gpu", "cpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "uvicorn>=0.20",
    "fastapi>=0.100",
    "safetensors>=0.4",
    "numpy>=1.24",
    "transformers>=4.40",
]

[project.optional-dependencies]
gpu = ["flashinfer>=0.1", "sgl-kernel>=0.0.1", "sglang>=0.4"]

[project.urls]
Homepage = "https://github.com/brontoguana/krasis"
Repository = "https://github.com/brontoguana/krasis"

[project.scripts]
krasis = "krasis.launcher:main"
krasis-chat = "krasis.chat:main"
krasis-setup = "krasis.setup:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "krasis.krasis"
